@@ -51,11 +51,12 @@
 - API Addition: GWTApplication#getJavaHeap and getNativeHeap are now supported
 - API Addition: Box2D Shape now implements Disposable
 - API Addition: Addes Tooltip#setTouchIndependent; see #6758
-- API ADDITION: Emulate Timer#isEmpty on GWT
+- API Addition: Emulate Timer#isEmpty on GWT
 - API Addition: Bits add copy constructor public Bits (Bits bitsToCpy)
 - API Addition: Added List#drawSelection().
 - API Fix: getDisplayMode() is now more accurate on Android and GWT.
-
+- API Addition: JsonValue#iterator(String) to more easily iterate a child that may not exist.
+s
 [1.10.0]
 - [BREAKING CHANGE] Android armeabi support has been removed. To migrate your projects: remove any dependency with natives-armeabi qualifier from your gradle build file, this apply to gdx-platform, gdx-bullet-platform, gdx-freetype-platform and gdx-box2d-platform.
 - [BREAKING CHANGE] tvOS libraries have been removed. No migration steps required.
